kubernetes/monitoring/influxdb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: influxdb.azure.shukawam.me
      http:
        paths:
        - backend:
            service:
              name: influxdb
              port:
                number: 8086
          path: /
          pathType: Prefix
