kubernetes/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: grafana.azure.shukawam.me
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            path: /
            pathType: Prefix
    - host: prometheus.azure.shukawam.me
      http:
        paths:
          - backend:
              service:
                name: prometheus
                port:
                  number: 9090
            path: /
            pathType: Prefix
    - host: jaeger.azure.shukawam.me
      http:
        paths:
          - backend:
              service:
                name: tracing
                port:
                  number: 80
            path: /
            pathType: Prefix
