kubernetes/monitoring/jaeger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: jaeger.azure.shukawam.me
      http:
        paths:
          - backend:
              service:
                name: tracing
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-collector-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
spec:
  rules:
    - host: jaeger-collector.azure.shukawam.me
      http:
        paths:
          - backend:
              service:
                name: jaeger-collector
                port:
                  number: 14250
            path: /
            pathType: Prefix
